--- a/html-concept/style/LESS/start.less
+++ b/html-concept/style/LESS/start.less
@@ -4,21 +4,29 @@
   margin: 0px;
   padding: 0px;
   -webkit-box-sizing: border-box;
-  /* Safari/Chrome, other WebKit */
+  // Safari/Chrome, other WebKit
 
   -moz-box-sizing: border-box;
-  /* Firefox, other Gecko */
+  // Firefox, other Gecko
 
   box-sizing: border-box;
-  /* Opera/IE 8+ */
-
-  font-family: calibri;
+  // Opera/IE 8+
+}
+body
+{
+    font-weight: 500;
+    font-size: 1.3rem;
+    font-family: "Helvetica Neue","Helvetica","calibri","Arial",Sans-Serif;
+}
+ul,menu
+{
+  list-style: none;
 }
 html {
   font-size: 62.5%;
 }
 
-/*MIXINS*/
+// MIXINS
 .border-radius (@radius) {
     border-radius: @radius;
     -moz-border-radius: @radius;
@@ -42,7 +50,7 @@ html {
     background-repeat: repeat-x;
 }
 
-.dropshadow(@xpos,@ypos,@size,@rgba) { /*@rgba = rgba(0,0,0,0.25)*/
+.dropshadow(@xpos,@ypos,@size,@rgba:rgba(0,0,0,0.25)) { //@rgba = rgba(0,0,0,0.25)
     box-shadow: @xpos @ypos @size @rgba;
     -moz-box-shadow: @xpos @ypos @size @rgba;
     -webkit-box-shadow: @xpos @ypos @size @rgba;
@@ -56,8 +64,17 @@ html {
 
 .rotate(@deg) {
     transform: rotate(@deg);
-    -ms-transform: rotate(@deg); /* IE 9 */
-    -webkit-transform: rotate(@deg); /* Safari and Chrome */
-    -o-transform: rotate(@deg); /* Opera */
-    -moz-transform: rotate(@deg); /* Firefox */
+    -ms-transform: rotate(@deg);
+    -webkit-transform: rotate(@deg);
+    -o-transform: rotate(@deg);
+    -moz-transform: rotate(@deg);
+}
+
+.hexBackgroundToRGBA(@hexcolor:black,@alpha:0.5)
+{
+  @red:red(@hexcolor);
+  @green:green(@hexcolor);
+  @blue:blue(@hexcolor);
+  background-color: @hexcolor;
+  background-color: rgba(@red,@green,@blue,@alpha);
 }
