--- a/html-concept 2/style/CSS/master.css
+++ b/html-concept 2/style/CSS/master.css
@@ -1,3 +1,30 @@
+*,
+*:after,
+*:before {
+  margin: 0px;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  font-weight: 500;
+  font-size: 1.3rem;
+  font-family: "Helvetica Neue", "Helvetica", "calibri", "Arial", Sans-Serif;
+}
+ul,
+menu {
+  list-style: none;
+}
+html {
+  font-size: 62.5% !important;
+}
+.right {
+  float: right !important;
+}
+.left {
+  float: left !important;
+}
 body {
   font-family: "corbel" !important;
 }
@@ -40,33 +67,55 @@ body .content nav ul li ul li:hover {
   background-color: #d5d5d5;
   border-color: #ccc;
 }
+body .content nav ul > li > ul > li > a {
+  color: #777 !important;
+}
+body .content nav ul > li > ul > li > a:hover {
+  color: #333 !important;
+}
+body .content nav .tab-pane ul {
+  padding: 5px 5px 0px 5px;
+  margin: 0px;
+}
+body .content nav .tab-pane ul li {
+  margin-bottom: 5px;
+}
+body .content nav .tab-pane ul li a {
+  color: white;
+}
+body .content nav .tab-pane ul li a:hover {
+  text-decoration: none;
+}
 body .content section {
   float: left;
   width: 80%;
   height: 100%;
 }
-body .content section .navbar {
-  height: 5%;
-  min-height: 5%;
+body .content section .actionbar {
+  height: 7%;
+}
+body .content section .actionbar .navbar {
+  height: 100%;
   margin: 0px;
 }
-body .content section .navbar ul {
+body .content section .actionbar .navbar ul {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+body .content section .actionbar .navbar ul li {
   float: right;
   height: 100%;
   min-height: 100%;
 }
-body .content section .navbar ul li {
-  height: 100%;
-  min-height: 100%;
-}
-body .content section .navbar ul li a {
+body .content section .actionbar .navbar ul li a {
   height: 100%;
   min-height: 100%;
 }
 body .content section .view {
-  height: 95%;
+  height: 93%;
   width: 100%;
-  padding-top: 20px;
+  padding: 10px;
   overflow: auto;
 }
 .selected {
@@ -74,4 +123,19 @@ body .content section .view {
 }
 .selected:hover td {
   background-color: #ddd !important;
+}
+.artikellist {
+  height: 100%;
+  overflow: auto;
+}
+.artikelbar {
+  height: 100%;
+  background-color: whitesmoke;
+  padding: 10px;
+}
+.artikelbar .input-group-addon {
+  color: black;
+}
+.fullheight {
+  height: 100% !important;
 }
