--- a/BZN-ember/app/templates/application.hbs
+++ b/BZN-ember/app/templates/application.hbs
@@ -1,3 +1,12 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<header class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Bond Zonder Naam</a>
+    <ul class="nav navbar-nav">
+      {{#link-to 'general' tagName='li'}}<a>Algemeen</a>{{/link-to}}
+      {{#link-to 'sales' tagName='li'}}<a>Verkoop</a>{{/link-to}}
+      {{#link-to 'proms' tagName='li'}}<a>Proms</a>{{/link-to}}
+    </ul>
+  </div>
+</header>
 
 {{outlet}}
