Header design, code cleanup

--- a/BZN-ember/app/styles/header.less
+++ b/BZN-ember/app/styles/header.less
@@ -1,3 +1,11 @@
+@import "../../vendor/bootstrap/less/navbar.less";
+
 header {
-  /* background-color: @branding-red; */
+  margin: 0 !important;
+  border: 0 !important;
+  border-radius: 0 !important;
+  background-color: @branding-red !important;
+
+  li > a, a { color: @white !important; }
+  li.active > a { color: @black !important; }
 }
