--- a/BZN-ember/app/templates/application.hbs
+++ b/BZN-ember/app/templates/application.hbs
@@ -1,7 +1,8 @@
 <header class="navbar navbar-default" role="navigation">
   <a class="navbar-brand" href="#">Bond Zonder Naam</a>
   <ul class="nav navbar-nav">
-    {{#link-to 'general' tagName='li'}}<a>Algemeen</a>{{/link-to}}
+    {{#link-to 'articles.index' tagName='li'}}<a>Artikelen</a>{{/link-to}}
+    {{#link-to 'control' tagName='li'}}<a>Controle</a>{{/link-to}}
     {{#link-to 'sales' tagName='li'}}<a>Verkoop</a>{{/link-to}}
     {{#link-to 'proms' tagName='li'}}<a>Proms</a>{{/link-to}}
   </ul>
