generate slugs for articles

--- a/BZN-ember/app/styles/layout.less
+++ b/BZN-ember/app/styles/layout.less
@@ -1,1 +1,5 @@
 .content { margin-top: 20px; }
+
+body {
+  font-family: "corbel", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+}
