--- a/BZN-ember/app/templates/articles/edit.hbs
+++ b/BZN-ember/app/templates/articles/edit.hbs
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label for="inputNumber" class="col-lg-3 control-label">Artikelnummer</label>
     <div class="col-lg-9">
-      {{input class="form-control" id="inputNumber" value=code}}
+      {{input class="form-control" id="inputNumber" value=code disabled=true}}
     </div>
   </div>
   <div class="form-group">
