--- a/BZN-ember/app/templates/articles.hbs
+++ b/BZN-ember/app/templates/articles.hbs
@@ -12,7 +12,7 @@
           {{#link-to 'articles.edit' article tagName='tr'}}
             <td>{{article.code}}</td>
             <td>{{article.name}}</td>
-            <td>{{article.price}}</td>
+            <td>{{article.displayPrice}}</td>
             <td>{{article.kind}}</td>
           {{/link-to}}
         {{else}}
