--- a/BZN-ember/app/templates/articles/edit.hbs
+++ b/BZN-ember/app/templates/articles/edit.hbs
@@ -13,9 +13,11 @@
   </div>
   <div class="form-group">
     <label for="inputPrice" class="col-lg-3 control-label">Prijs</label>
-    <div class="input-group col-lg-9">
-      <span class="input-group-addon">&euro;</span>
-      {{input class="form-control" id="inputPrice" value=price}}
+    <div class="col-lg-9">
+      <div class="input-group">
+        <span class="input-group-addon">&euro;</span>
+        {{input class="form-control" id="inputPrice" value=price}}
+      </div>
     </div>
   </div>
   <div class="form-group">
