--- a/BZN-ember/app/templates/articles.hbs
+++ b/BZN-ember/app/templates/articles.hbs
@@ -25,6 +25,11 @@
   </div>
 
   <div class="col-md-4">
-    {{outlet}}
+    {{link-to "Nieuw artikel" "articles.new" tagName="button" class="btn
+    btn-primary btn-block"}}
+
+   <div class="content">
+     {{outlet}}
+   </div>
   </div>
 </div>
