add link for new sale

--- a/BZN-ember/app/templates/application.hbs
+++ b/BZN-ember/app/templates/application.hbs
@@ -6,6 +6,9 @@
     {{#link-to 'sales' tagName='li'}}<a>Verkoop</a>{{/link-to}}
     {{#link-to 'proms' tagName='li'}}<a>Proms</a>{{/link-to}}
   </ul>
+  <ul class="nav navbar-nav pull-right">
+    {{#link-to 'sale.new' tagName='li'}}<a>Nieuwe verkoop</a>{{/link-to}}
+  </ul>
 </header>
 
 {{outlet}}
