added some models, crud operations of proms

--- a/BZN-ember/app/styles/app.less
+++ b/BZN-ember/app/styles/app.less
@@ -1,3 +1,5 @@
+@import "variables.less";
+
 // Core variables and mixins
 @import "../../bower_components/bootstrap/less/mixins.less";
 
@@ -47,6 +49,6 @@
 @import "../../bower_components/bootstrap/less/utilities.less";
 @import "../../bower_components/bootstrap/less/responsive-utilities.less";
 
-@import "variables.less";
 @import "header.less";
 @import "layout.less";
+@import "proms.less";
