--- a/BZN-ember/app/templates/articles/edit.hbs
+++ b/BZN-ember/app/templates/articles/edit.hbs
@@ -2,13 +2,13 @@
   <div class="form-group">
     <label for="inputNumber" class="col-lg-3 control-label">Artikelnummer</label>
     <div class="col-lg-9">
-      {{input class="form-control" id="inputNumber" value=code disabled=true}}
+      {{input class="form-control" id="inputNumber" value=changeCode disabled=true}}
     </div>
   </div>
   <div class="form-group">
     <label for="inputName" class="col-lg-3 control-label">Artikelnaam</label>
     <div class="col-lg-9">
-      {{input class="form-control" id="inputName" value=name}}
+      {{input class="form-control" id="inputName" value=changeName}}
     </div>
   </div>
   <div class="form-group">
@@ -16,14 +16,14 @@
     <div class="col-lg-9">
       <div class="input-group">
         <span class="input-group-addon">&euro;</span>
-        {{input class="form-control" id="inputPrice" value=price}}
+        {{input type="number" class="form-control" id="inputPrice" value=changePrice}}
       </div>
     </div>
   </div>
   <div class="form-group">
     <label for="inputType" class="col-lg-3 control-label">Type</label>
     <div class="col-lg-9">
-      {{input class="form-control" id="inputType" value=kind}}
+      {{input class="form-control" id="inputType" value=changeKind}}
     </div>
   </div>
 
