--- a/BZN-ember/app/templates/articles/new.hbs
+++ b/BZN-ember/app/templates/articles/new.hbs
@@ -16,7 +16,7 @@
     <div class="col-lg-9">
       <div class="input-group">
         <span class="input-group-addon">&euro;</span>
-        {{input class="form-control" id="inputPrice" value=price}}
+        {{input type="number" class="form-control" id="inputPrice" value=price}}
       </div>
     </div>
   </div>
