--- a/app/templates/transfer/new.hbs
+++ b/app/templates/transfer/new.hbs
@@ -1,5 +1,5 @@
 <div class="well">
-  <p>Datum: 17.10.1993</p>
+  <p>Datum: {{currentDate}}</p>
 </div>
 <div class="panel panel-default">
   <table class="table table-hover">
