Implemented large part of cash UI

--- a/app/templates/prom.hbs
+++ b/app/templates/prom.hbs
@@ -5,7 +5,7 @@
       {{#link-to 'prom.stock' tagName='li'}}<a>Stock</a>{{/link-to}}
       {{#link-to 'transfer' tagName='li'}}<a>Transfer</a>{{/link-to}}
       {{#link-to 'prom.sale' tagName='li'}}<a>Verkoop</a>{{/link-to}}
-      {{#link-to 'prom.till' tagName='li'}}<a>Kas</a>{{/link-to}}
+      {{#link-to 'cash' tagName='li'}}<a>Kas</a>{{/link-to}}
     </ul>
   </div>
 </nav>
