--- a/app/templates/cash.hbs
+++ b/app/templates/cash.hbs
@@ -32,7 +32,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Overzicht stock</div>
       <div class="panel-body">
-        <p>Hier komt een overzicht van de resterende stock, en de berekende som</p>
+        <p>Hier komt een overzicht van de resterende stock (default collapsed), en de berekende som</p>
       </div>
 
       <table class="table">
